--- a/about/index.html
+++ b/about/index.html
@@ -289,7 +289,8 @@ in support of the nation’s exascale computing imperative.</p>
 </ul>
 <hr />
 <p>Website built with <a href="http://www.mkdocs.org/">MkDocs</a>, <a href="http://getbootstrap.com/">Bootstrap</a>
-and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://github.com/ceed/">GitHub</a>.</p></div>
+and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://github.com/ceed/">GitHub</a>.
+LLNL-WEB-XXXXXX.</p></div>
 
             
         </div>
@@ -299,13 +300,23 @@ and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://g
               <p class="text-muted alignleft">
                   Developed by the <a href="../about/">CEED team</a>
                   as part of the
-                  <a href="http://exascaleproject.org">Exascale Computing Project</a>,
-                  LLNL-WEB-XXXXXX </p>
+                  <a href="http://exascaleproject.org">Exascale Computing Project</a></p>
                   <div style="text-align:right">
                   <a href="http://exascaleproject.org">
-                  <img src="../img/ecp-black-50.png"
+                  <img src="../img/ecp-black.png"
                   style="display:inline;height:50px;padding:10px;margin:0"
-                  alt="ECP logo"></a></div>
+                  alt="ECP logo"></a>
+                  <a href="https://science.energy.gov/">
+                  <img src="../img/doe-sc.png"
+                  style="display:inline;height:50px;padding:10px;margin:0"
+                  alt="DOE-SC logo"></a>
+                  <a href="https://nnsa.energy.gov/">
+                  <img src="../img/nnsa.png"
+                  style="display:inline;height:50px;padding:10px;margin:0"
+                  alt="NNSA logo"></a>
+
+</div>
+                  </div>
                   <!-- footer height is 50px -->
            </div>
         </footer>
