--- a/ceed-code/index.html
+++ b/ceed-code/index.html
@@ -277,13 +277,23 @@ In the case where we pre-compute and store the $D$ matrix, we call the algorithm
               <p class="text-muted alignleft">
                   Developed by the <a href="../about/">CEED team</a>
                   as part of the
-                  <a href="http://exascaleproject.org">Exascale Computing Project</a>,
-                  LLNL-WEB-XXXXXX </p>
+                  <a href="http://exascaleproject.org">Exascale Computing Project</a></p>
                   <div style="text-align:right">
                   <a href="http://exascaleproject.org">
-                  <img src="../img/ecp-black-50.png"
+                  <img src="../img/ecp-black.png"
                   style="display:inline;height:50px;padding:10px;margin:0"
-                  alt="ECP logo"></a></div>
+                  alt="ECP logo"></a>
+                  <a href="https://science.energy.gov/">
+                  <img src="../img/doe-sc.png"
+                  style="display:inline;height:50px;padding:10px;margin:0"
+                  alt="DOE-SC logo"></a>
+                  <a href="https://nnsa.energy.gov/">
+                  <img src="../img/nnsa.png"
+                  style="display:inline;height:50px;padding:10px;margin:0"
+                  alt="NNSA logo"></a>
+
+</div>
+                  </div>
                   <!-- footer height is 50px -->
            </div>
         </footer>
