Updating CEED website

--- a/index.html
+++ b/index.html
@@ -330,22 +330,21 @@ the <a href="https://github.com/CEED/forum">CEED user forum</a>.</p>
 <p>For additional information, see the <a href="about/">About</a> page.</p>
 </div>
 
-<div class="col-md-12">
-<br>
-<div class="row">
-    <div class="col-xs-1 col-md-1"></div>
-    <div class="col-xs-1 col-md-1"></div>
-    <div class="col-xs-1 col-md-1"></div>
-    <div class="col-xs-1 col-md-1"><a href="http://www.llnl.gov"><img src="img/llnl.png" alt="LLNL logo" class="img-responsive"></a></div>
-    <div class="col-xs-1 col-md-1"><a href="http://www.anl.gov"><img src="img/anl.png" alt="ANL logo" class="img-responsive"></a></div>
-    <div class="col-xs-1 col-md-1"><a href="http://www.utk.edu"><img src="img/utk.png" alt="UTK logo" class="img-responsive"></a></div>
-    <div class="col-xs-1 col-md-1"><a href="http://www.vt.edu"><img src="img/vtech.png" alt="VTech logo" class="img-responsive"></a></div>
-    <div class="col-xs-1 col-md-1"><a href="http://www.colorado.edu"><img src="img/cu.png" alt="CU logo" class="img-responsive"></a></div>
-    <div class="col-xs-1 col-md-1"><a href="http://www.uiuc.edu"><img src="img/uiuc.png" alt="UIUC logo" class="img-responsive"></a></div>
-    <div class="col-xs-1 col-md-1"><a href="http://www.rpi.edu"><img src="img/rpi.png" alt="RPI logo" class="img-responsive"></a></div>
-    <div class="col-xs-1 col-md-1"></div>
-    <div class="col-xs-1 col-md-1"></div>
+<div class="col-xs-12 col-md-12" style="text-align:center;padding-left:0;padding-right:0;padding-bottom:0">
+<br><br>
+<div class="col-xs-6 col-md-6" style="width:8%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.llnl.gov"><img src="img/llnl.png" alt="LLNL logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.anl.gov"><img src="img/anl.png" alt="ANL logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.utk.edu"><img src="img/utk.png" alt="UTK logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.vt.edu"><img src="img/vtech.png" alt="VTech logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.colorado.edu"><img src="img/cu.png" alt="CU logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.uiuc.edu"><img src="img/uiuc.png" alt="UIUC logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.rpi.edu"><img src="img/rpi.png" alt="RPI logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:8%;padding:0"></div>
 </div>
+
+<div class="col-xs-12 col-md-12" style="text-align:center;padding-left:0;padding-right:0;padding-bottom:0">
+<br><br>
 </div>
 
             
