Updating CEED website

--- a/bps/index.html
+++ b/bps/index.html
@@ -356,13 +356,13 @@
             
         </div>
 
-        <footer class="footer">
+        <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
-                  Developed by the <a href="../about/">CEED team</a>
-                  as part of the
-                  <a href="http://exascaleproject.org">Exascale Computing Project</a></p>
-                  <div style="text-align:right">
+              Developed by the <a href="../about/">CEED team</a>
+              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
+              </p>
+              <div style="text-align:right">
                   <a href="http://exascaleproject.org">
                   <img src="../img/ecp-black.png"
                   style="display:inline;height:50px;padding:10px;margin:0"
@@ -375,10 +375,22 @@
                   <img src="../img/nnsa.png"
                   style="display:inline;height:50px;padding:10px;margin:0"
                   alt="NNSA logo"></a>
+               </div>
+               <!-- footer height is 50px -->
+           </div>
+        </footer>
 
-</div>
-                  </div>
-                  <!-- footer height is 50px -->
+        <footer class="footer hidden-md hidden-sm hidden-lg">
+           <div class="container">
+              <p class="text-muted alignleft">
+              Developed by the <a href="../about/">CEED team</a>
+              </p>
+              <div style="text-align:right">
+                  <a href="http://exascaleproject.org">
+                  <img src="../img/ecp-black.png"
+                  style="display:inline;height:50px;padding:10px;margin:0"
+                  alt="ECP logo"></a>
+              </div>
            </div>
         </footer>
 
