Updating CEED website

--- a/about/index.html
+++ b/about/index.html
@@ -234,7 +234,7 @@
             <div class="col-md-12" role="main">
 
 <p><img alt="" src="../img/team.jpg" /></p>
-<h1 id="about-ceed">About CEED</h1>
+<h2 id="about-ceed">About CEED</h2>
 <p>The Center for Efficient Exascale Discretizations is a research partnership
 between two DOE labs and five universities:</p>
 <ul>
@@ -253,6 +253,7 @@ Science and the National Nuclear Security Administration) responsible for the
 planning and preparation of a capable exascale ecosystem, including software,
 applications, hardware, advanced system engineering and early testbed platforms,
 in support of the nation’s exascale computing imperative.</p>
+<p><br></p>
 <h2 id="our-team">Our Team</h2>
 <ul>
 <li><a href="https://scholar.google.com/citations?user=TLMGUh4AAAAJ&amp;hl=en">Ahmad Abdelfattah</a></li>
@@ -289,8 +290,8 @@ in support of the nation’s exascale computing imperative.</p>
 </ul>
 <hr />
 <p>Website built with <a href="http://www.mkdocs.org/">MkDocs</a>, <a href="http://getbootstrap.com/">Bootstrap</a>
-and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://github.com/ceed/">GitHub</a>.
-LLNL-WEB-XXXXXX.</p></div>
+and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://github.com/ceed/">GitHub</a>.</p>
+<p>LLNL-WEB-XXXXXX.</p></div>
 
             
         </div>
