--- a/gslib/index.html
+++ b/gslib/index.html
@@ -241,8 +241,17 @@
 </div></div> <!-- toc on top on mobile -->
             <div class="col-md-9" role="main">
 
-<h1 id="gslib">gslib</h1>
-<p><em>This page is under construction</em></p></div>
+<h2 id="gslib"><a href="https://github.com/gslib/gslib">gslib</a></h2>
+<p><em>This page is under construction</em></p>
+<p>A library for Gather/Scatter-type nearest neighbor data exchanges for parallel spectral element computations.</p>
+<p>Additional features include:</p>
+<ul>
+<li>XXT solver (parallel direct solver)</li>
+<li>AMG solver</li>
+<li>Robust spectral element interpolation for a given set of points</li>
+</ul>
+<p>gslib's applications include <a href="../nek/">Nek5000</a> and <a href="http://www.nektar.info">Nektar++</a>.</p>
+<p>For more information, see the gslib GitHub repository: <a href="https://github.com/gslib/gslib">https://github.com/gslib/gslib</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
