--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ computational motifs and their performance on exascale hardware:</p>
 <li>Efficient matrix-free operator evaluation on all mesh geometries for all spaces in the de Rham complex.</li>
 </ul>
 <h2 id="whats-new">What's New?</h2>
-<p>Some recent activities of the center are listed below. For additional project updates, see the <a href="news/">News</a> page.</p>
+<p>Recent activities of the center are listed below. For additional updates, see the <a href="news/">News</a> page.</p>
 <ul>
 <li><a href="news/#first-ceed-annual-meeting-to-be-held-at-llnl">First CEED annual meeting to be held at LLNL</a>
 (Aug 15-17, 2017)</li>
