--- a/magma/index.html
+++ b/magma/index.html
@@ -251,7 +251,7 @@
 </div></div> <!-- toc on top on mobile -->
             <div class="col-md-9" role="main">
 
-<h1 id="magma-wzxhzdk0"><a href="http://icl.cs.utk.edu/magma/">MAGMA</a> <img src="../img/magma.png" align="right" alt="MFEM logo"></h1>
+<h2 id="magma-wzxhzdk0"><a href="http://icl.cs.utk.edu/magma/">MAGMA</a> <img src="../img/magma.png" align="right" alt="MAGMA logo"></h2>
 <p><em>This page is under construction</em></p>
 <p>MAGMA (Matrix Algebra on GPU and Multicore Architectures) is a collection of
 next generation linear algebra libraries for heterogeneous architectures. MAGMA
@@ -264,16 +264,17 @@ software components to heterogeneous architectures. MAGMA allows applications to
 fully exploit the power of current heterogeneous systems of multi/many-core CPUs
 and multi-GPUs to deliver the fastest possible time to accurate solution within
 given energy constraints.</p>
-<h2 id="hybrid-algorithms">Hybrid Algorithms</h2>
-<p>MAGMA uses a hybridization methodology where algorithms of interest are split into tasks of 
-varying granularity and their execution scheduled over the available hardware components. 
-Scheduling can be static or dynamic. In either case, small non-parallelizable tasks, often on the 
-critical path, are scheduled on the CPU, and larger more parallelizable ones, often Level 3 BLAS, 
+<h3 id="hybrid-algorithms">Hybrid Algorithms</h3>
+<p>MAGMA uses a hybridization methodology where algorithms of interest are split into tasks of
+varying granularity and their execution scheduled over the available hardware components.
+Scheduling can be static or dynamic. In either case, small non-parallelizable tasks, often on the
+critical path, are scheduled on the CPU, and larger more parallelizable ones, often Level 3 BLAS
 are scheduled on accelerators.</p>
-<h2 id="performance-and-energy-efficiency">Performance and Energy Efficiency</h2>
-<h2 id="magma-batched">MAGMA Batched</h2>
-<h2 id="magma-sparse">MAGMA Sparse</h2>
-<h2 id="magma-development">MAGMA Development</h2></div>
+<h3 id="performance-and-energy-efficiency">Performance and Energy Efficiency</h3>
+<h3 id="magma-batched">MAGMA Batched</h3>
+<h3 id="magma-sparse">MAGMA Sparse</h3>
+<h3 id="magma-development">MAGMA Development</h3>
+<p>For more information, see the OCCA website: <a href="http://icl.cs.utk.edu/magma/">http://icl.cs.utk.edu/magma/</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
