--- a/nek/index.html
+++ b/nek/index.html
@@ -241,23 +241,25 @@
 </div></div> <!-- toc on top on mobile -->
             <div class="col-md-9" role="main">
 
-<h1 id="nek">Nek</h1>
-<p>Nek5000/NekCEM is open-source simulation-software package that delivers highly accurate 
-solutions for a wide range of scientific applications including fluid flow, thermal convection, 
-combustion, magnetohydrodynamics, and electromagnetics. </p>
-<p>It features state-of-the-art, scalable, high-order spectral-element based algorithms that are 
+<h2 id="nek"><a href="https://nek5000.mcs.anl.gov">Nek</a></h2>
+<p>Nek5000/NekCEM is open-source simulation-software package that delivers highly accurate
+solutions for a wide range of scientific applications including fluid flow, thermal convection,
+combustion, magnetohydrodynamics, and electromagnetics.</p>
+<p>It features state-of-the-art, scalable, high-order spectral-element based algorithms that are
 fast and efficient on platforms ranging from laptops to the world’s fastest computers.</p>
-<p>Nek5000/NekCEM's users include over 320 scientists and engineers in academia, laboratories, and 
+<p>Nek5000/NekCEM's users include over 320 scientists and engineers in academia, laboratories, and
 industry. We highlight a few of the many applications using Nek5000/NekCEM today.</p>
 <ul>
 <li><a href="http://www.mcs.anl.gov/~fischer/sem1b/">Reactor analysis</a></li>
 <li><a href="https://www.youtube.com/embed/hz7UjN_vYuw">Aerospace application</a></li>
-<li><a href="http://fischerp.cs.illinois.edu/tcc_7a.gif">Engine application</a> </li>
+<li><a href="http://fischerp.cs.illinois.edu/tcc_7a.gif">Engine application</a></li>
 <li><a href="https://player.vimeo.com/video/64470122">Ocean modeling</a></li>
 <li>Turbulence modeling</li>
 <li>Electromagnetics modeling</li>
 <li>Drift-diffusion  modeling</li>
-</ul></div>
+</ul>
+<p>Nek is freely available under a BSD license.</p>
+<p>For more information, see the Nek5000 website: <a href="https://nek5000.mcs.anl.gov">https://nek5000.mcs.anl.gov</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
