--- a/occa/index.html
+++ b/occa/index.html
@@ -241,14 +241,14 @@
 </div></div> <!-- toc on top on mobile -->
             <div class="col-md-9" role="main">
 
-<h1 id="occa-wzxhzdk0"><a href="http://libocca.org/">OCCA</a> <img src="../img/occa.png" align="right" alt="OCCA logo" width="350"></h1>
-<p><em>This page is under construction</em></p>
+<h2 id="occa-wzxhzdk0"><a href="http://libocca.org/">OCCA</a> <img src="../img/occa.png" align="right" alt="OCCA logo" width="350"></h2>
 <p>OCCA is an open-source library that facilitates programming in an environment
 containing different types of devices. It abstracts devices and let the user
 pick at run-time, for example: CPUs, GPUs, Intel’s Xeon Phi, FPGAs.</p>
 <p>OCCA abstracts the device programming languages into one kernel language, the
 OCCA kernel language (OKL). OKL minimally extends C and restricts the user to
 write parallel code that is JIT compiled.</p>
+<p>OCCA is freely available under an MIT license.</p>
 <p>For more information, see the OCCA website: <a href="http://libocca.org/">http://libocca.org</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
