--- a/petsc/index.html
+++ b/petsc/index.html
@@ -241,11 +241,16 @@
 </div></div> <!-- toc on top on mobile -->
             <div class="col-md-9" role="main">
 
-<h1 id="petsc">PETSc</h1>
-<p><em>This page is under construction</em></p>
-<p><a href="https://mcs.anl.gov/petsc">PETSc</a> is a scalable package for solving differential and algebraic equations.
-PETSc will coordinate with CEED to develop expressive interfaces for efficient and robust solution of the algebraic equations appearing in high-order/spectral element methods.
-This will include multilevel solvers that work with unassembled representations of linear operators.</p></div>
+<h2 id="petsc"><a href="https://www.mcs.anl.gov/petsc/">PETSc</a></h2>
+<p>PETSc is a scalable package for solving differential and algebraic equations.
+It supports MPI, and GPUs through CUDA or OpenCL, as well as hybrid MPI-GPU
+parallelism.</p>
+<p>As part of CEED, the PETSc project will coordinate the development of expressive
+interfaces for efficient and robust solution of the algebraic equations
+appearing in high-order/spectral element methods.  This will include multilevel
+solvers that work with unassembled representations of linear operators.</p>
+<p>PETSc is freely available under a BSD license.</p>
+<p>For more information, see the PETSc website: <a href="https://www.mcs.anl.gov/petsc/">https://www.mcs.anl.gov/petsc/</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
