--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 
 <p><img alt="CEED logo" src="./img/logo-300.png" /></p>
 <div class="col-md-6">
+
 <h2 id="ecp-co-design">ECP Co-Design</h2>
 <p>The Center for Efficient Exascale Discretizations (CEED) is an <a href="http://exascaleproject.org">Exascale
 Computing Project (ECP)</a> co-design center focused on
@@ -284,7 +285,9 @@ computational motifs and their performance on exascale hardware:</p>
 <li><a href="news/#ceed-co-design-center-announced">CEED co-design center announced</a> (Nov 11, 2016)</li>
 </ul>
 </div>
+
 <div class="col-md-6 news-table">
+
 <h2 id="software">Software</h2>
 <p>The CEED team includes members of the <a href="nek/">Nek5000</a>, <a href="mfem/">MFEM</a>, <a href="magma/">MAGMA</a>, <a href="occa/">OCCA</a> and <a href="petsc/">PETSc</a> projects.
 Building on these efforts, the co-design center will produce a range of software products, including:</p>
@@ -325,17 +328,24 @@ Lead the development of discretization libraries and miniapps.</p>
 the <a href="https://github.com/CEED/forum">CEED user forum</a>.</p>
 <p>For additional information, see the <a href="about/">About</a> page.</p>
 </div>
+
 <div class="col-xs-12 col-md-12" style="text-align:center;padding-left:0;padding-right:0;padding-bottom:0">
 <br><br>
-<div class="col-xs-6 col-md-6" style="width:8%;padding:0"></div>
-<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.llnl.gov"><img src="img/llnl.png" alt="LLNL logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
-<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.anl.gov"><img src="img/anl.png" alt="ANL logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
-<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.utk.edu"><img src="img/utk.png" alt="UTK logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
-<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.vt.edu"><img src="img/vtech.png" alt="VTech logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
-<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.colorado.edu"><img src="img/cu.png" alt="CU logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
-<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.uiuc.edu"><img src="img/uiuc.png" alt="UIUC logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
-<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.rpi.edu"><img src="img/rpi.png" alt="RPI logo" class="img-responsive" style="display:inline;padding:0;margin:0"></a></div>
-<div class="col-xs-6 col-md-6" style="width:8%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:5%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.llnl.gov"><img src="img/llnl.png" alt="LLNL logo" class="desaturate" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:1%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.anl.gov"><img src="img/anl.png" alt="ANL logo" class="desaturate" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:1%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.utk.edu"><img src="img/utk.png" alt="UTK logo" class="desaturate" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:1%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.vt.edu"><img src="img/vtech.png" alt="VTech logo" class="desaturate" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:1%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.colorado.edu"><img src="img/cu.png" alt="CU logo" class="desaturate" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:1%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.uiuc.edu"><img src="img/uiuc.png" alt="UIUC logo" class="desaturate" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:1%;padding:0"></div>
+<div class="col-xs-6 col-md-6" style="width:12%;padding:0"><a href="http://www.rpi.edu"><img src="img/rpi.png" alt="RPI logo" class="desaturate" style="display:inline;padding:0;margin:0"></a></div>
+<div class="col-xs-6 col-md-6" style="width:5%;padding:0"></div>
 </div>
 
 <div class="col-xs-12 col-md-12" style="text-align:center;padding-left:0;padding-right:0;padding-bottom:0">
