Updating CEED website

--- a/magma/index.html
+++ b/magma/index.html
@@ -253,7 +253,7 @@
 
 <h2 id="magma-wzxhzdk0"><a href="http://icl.cs.utk.edu/magma/">MAGMA</a> <img src="../img/magma.png" align="right" alt="MAGMA logo"></h2>
 <p><em>This page is under construction</em></p>
-<p><img alt="MAGMA Features and Support" src="http://icl.cs.utk.edu/img/magma_features.png" />
+<p><img alt="MAGMA Features and Support" src="../../img/magma_features.png" />
 MAGMA (Matrix Algebra on GPU and Multicore Architectures) is a collection of
 next generation linear algebra libraries for heterogeneous architectures. MAGMA
 is designed and implemented by the team that developed LAPACK and ScaLAPACK,
@@ -266,16 +266,16 @@ fully exploit the power of current heterogeneous systems of multi/many-core CPUs
 and multi-GPUs to deliver the fastest possible time to accurate solution within
 given energy constraints.</p>
 <h3 id="hybrid-algorithms">Hybrid Algorithms</h3>
-<p><img alt="MAGMA Hybrid Algorithms as DAGs" src="http://icl.cs.utk.edu/img/magma_dag.jpg" />
+<p><img alt="MAGMA Hybrid Algorithms as DAGs" src="../../img/magma_dag.jpg" />
 MAGMA uses a hybridization methodology where algorithms of interest are split into tasks of
 varying granularity and their execution scheduled over the available hardware components.
 Scheduling can be static or dynamic. In either case, small non-parallelizable tasks, often on the
 critical path, are scheduled on the CPU, and larger more parallelizable ones, often Level 3 BLAS
 are scheduled on accelerators.</p>
 <h3 id="performance-and-energy-efficiency">Performance and Energy Efficiency</h3>
-<p><img alt="MAGMA Performance" src="http://icl.cs.utk.edu/img/magma_p100.jpg" /></p>
+<p><img alt="MAGMA Performance" src="../../img/magma_p100.jpg" /></p>
 <h3 id="magma-batched">MAGMA Batched</h3>
-<p><img alt="MAGMA Batched" src="http://icl.cs.utk.edu/img/magma_batched.png" /></p>
+<p><img alt="MAGMA Batched" src="../../img/magma_batched.png" /></p>
 <h3 id="magma-sparse">MAGMA Sparse</h3>
 <h3 id="magma-development">MAGMA Development</h3>
 <p>For more information, see the MAGMA website: <a href="http://icl.cs.utk.edu/magma/">http://icl.cs.utk.edu/magma/</a>.</p></div>
