Updating CEED website

--- a/about/index.html
+++ b/about/index.html
@@ -273,6 +273,7 @@ in support of the nation’s exascale computing imperative.</p>
 <li><a href="http://faculty.rpi.edu/node/35899">Mark Shepard</a></li>
 <li><a href="http://www.mcs.anl.gov/person/matthew-otten">Matt Otten</a></li>
 <li><a href="http://www.mcs.anl.gov/~mmin">Misun Min</a> &mdash; Lead for the <a href="../ap/">Applications</a> thrust</li>
+<li><a href="https://www.math.vt.edu/people/nchalmer/">Noel Chalmers</a></li>
 <li><a href="https://people.llnl.gov/vassilevski1">Panayot Vassilevski</a></li>
 <li><a href="http://fischerp.cs.illinois.edu/research.html">Paul Fischer</a> &mdash; Deputy Director of CEED</li>
 <li><a href="https://scholar.google.com/citations?user=lcSP908AAAAJ">Robert Rieben</a></li>
