--- a/holmes/index.html
+++ b/holmes/index.html
@@ -242,7 +242,50 @@
             <div class="col-md-9" role="main">
 
 <h2 id="holmes">Holmes</h2>
-<p><em>This page is under construction</em></p></div>
+<p><em>This page is under construction</em></p>
+<p>Holmes is an experimental testbed for multi-level parallel implementations of
+high-order finite element computations.</p>
+<p>Its features include:</p>
+<ul>
+<li>Elements<ul>
+<li>Spectral element quadrilateral and hexahedral elements</li>
+<li>Warp &amp; blend high-order nodal triangular and tetrahedral elements</li>
+</ul>
+</li>
+<li>Discretizations<ul>
+<li>Elliptic: continuous and discontinuous Galerkin discretization</li>
+<li>Hyperbolic: discontinuous Galerkin time-domain</li>
+</ul>
+</li>
+<li>Solvers<ul>
+<li>Two level overlapping additive Schwartz elliptic problem preconditioning<ul>
+<li>Fast approximate block preconditioning</li>
+<li>Algebraic multigrid coarse solver with heterogeneous acceleration</li>
+<li>Parallel direct solver XXT for the coarsest level solve.</li>
+</ul>
+</li>
+</ul>
+</li>
+<li>Implementation<ul>
+<li>Portable on-node parallelism via the Open Concurrent Compute Abstraction, <a href="../occa/">OCCA</a></li>
+<li>MPI communications for distributed computations</li>
+</ul>
+</li>
+<li>Dependencies<ul>
+<li>The XXT parallel direct solver for the coarsest AMG solve</li>
+<li>The <a href="../gslib/">gslib</a> for optimized gather-scatter operations</li>
+</ul>
+</li>
+<li>Example ceedling apps<ul>
+<li>Elliptic solvers</li>
+<li>Boltzmann flow solver</li>
+<li>Acoustics time-domain solver</li>
+</ul>
+</li>
+</ul>
+<p>Holmes is being developed in <a href="http://tcew.github.io/#/Projects">Tim Warburton's group</a>
+in <a href="https://www.vt.edu/">Virginia Tech</a>.</p>
+<p>The project GitHub repository will be made public in 2017.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
