--- a/magma/index.html
+++ b/magma/index.html
@@ -278,6 +278,8 @@ are scheduled on accelerators.</p>
 <p><img alt="MAGMA Batched" src="../../img/magma_batched.png" /></p>
 <h3 id="magma-sparse">MAGMA Sparse</h3>
 <h3 id="magma-development">MAGMA Development</h3>
+<p>MAGMA is being developed at the <a href="http://icl.cs.utk.edu">Innovative Computing Laboratory</a>
+of the <a href="https://www.utk.edu/">University of Tennessee</a>.</p>
 <p>For more information, see the MAGMA website: <a href="http://icl.cs.utk.edu/magma/">http://icl.cs.utk.edu/magma/</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
