--- a/about/index.html
+++ b/about/index.html
@@ -246,6 +246,8 @@ between two DOE labs and five universities:</p>
 <li><a href="http://www.utk.edu">The University of Tennessee, Knoxville</a></li>
 <li><a href="http://www.vt.edu">Virginia Tech</a></li>
 </ul>
+<p>You can reach us by emailing <a href="mailto:ceed-users@llnl.gov">ceed-users@llnl.gov</a> or by leaving a comment in
+the <a href="https://github.com/CEED/forum">CEED user forum</a>.</p>
 <p><img src="../img/ecp.png" align="center" alt="ECP logo" width="300"></p>
 <p>This research was supported by the <a href="http://exascaleproject.org">Exascale Computing Project</a> (17-SC-20-SC),
 a collaborative effort of two U.S. Department of Energy organizations (Office of
