Deploying the CEED website with mkdocs, version 0.16.3

--- a/miniapps/index.html
+++ b/miniapps/index.html
@@ -250,12 +250,17 @@
 <p><em>This page is under construction</em></p>
 <ul>
 <li>List of miniapps, with documentation and downloads</li>
-<li>
-<p>Nekbone:</p>
-<ul>
+<li>Nekbone:<ul>
 <li>Nek5000 miniapp, solving Poisson equation with conjugate gradident</li>
 <li>Documentation can be found in Http://withub.com/Nek5000/NekDoc</li>
 <li>Download from github http://github.com/Nek5000/Nekbone</li>
+</ul>
+</li>
+<li>
+<p>NekCEM-ceedling:</p>
+<ul>
+<li>NekCEM miniapp, solving time-domain Maxwell equations </li>
+<li>Documentation and Download to be available from github</li>
 </ul>
 </li>
 <li>
