Deploying the CEED website with mkdocs, version 0.16.3

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@ computational motifs and their performance on exascale hardware:</p>
 <ul>
 <li><a href="news/#first-ceed-annual-meeting-to-be-held-at-llnl">First CEED annual meeting to be held at LLNL</a>
 (Aug 15-17, 2017)</li>
+<li><a href="news/#gpu-hackaton-2017">CEED to participate in GPU hackaton at BNL</a> (Jun 5-9, 2017)</li>
 <li><a href="news/#workshop-on-batched-reproducible-and-reduced-precision-blas">Workshop on batched BLAS</a> (Feb 23-25, 2017)</li>
 <li><a href="news/#software-release-mfem-v33">Software release: MFEM v3.3</a> (Jan 28, 2017)</li>
 <li><a href="news/#ceed-co-design-center-announced">CEED co-design center announced</a> (Nov 11, 2016)</li>
