--- a/miniapps/index.html
+++ b/miniapps/index.html
@@ -251,15 +251,15 @@
 <ul>
 <li>List of miniapps, with documentation and downloads</li>
 <li>Nekbone:<ul>
-<li>Nek5000 miniapp, solving Poisson equation with conjugate gradident</li>
-<li>Documentation can be found in Http://withub.com/Nek5000/NekDoc</li>
-<li>Download from github http://github.com/Nek5000/Nekbone</li>
+<li>Nek5000 miniapp, solving Poisson equation with conjugate gradient</li>
+<li>Documentation can be found in http://withub.com/Nek5000/NekDoc</li>
+<li>Download from GitHub http://github.com/Nek5000/Nekbone</li>
 </ul>
 </li>
 <li>
 <p>NekCEM-ceedling:</p>
 <ul>
-<li>NekCEM miniapp, solving time-domain Maxwell equations </li>
+<li>NekCEM miniapp, solving time-domain Maxwell equations</li>
 <li>Documentation and Download to be available from github</li>
 </ul>
 </li>
