Deploying the CEED website with mkdocs, version 0.16.3

--- a/miniapps/index.html
+++ b/miniapps/index.html
@@ -256,16 +256,18 @@
 <li>Download from GitHub http://github.com/Nek5000/Nekbone</li>
 </ul>
 </li>
-<li>
-<p>NekCEM-ceedling:</p>
-<ul>
+<li>NekCEM-ceedling:<ul>
 <li>NekCEM miniapp, solving time-domain Maxwell equations</li>
 <li>Documentation and Download to be available from github</li>
 </ul>
 </li>
-<li>
-<p>Database of results/expectations</p>
+<li>MFEM examples:<ul>
+<li>miniapps/performance Ex1</li>
+<li>Lagrangian hydrodynamics miniapp (under development)</li>
+<li>Other MFEM example codes and miniapps</li>
+</ul>
 </li>
+<li>Database of results/expectations</li>
 <li>Target audience is: ECP vendors, ST projects</li>
 </ul></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
