--- a/ap/index.html
+++ b/ap/index.html
@@ -246,7 +246,7 @@
 <!-- ... fa-comment, fa-comment-o, fa-comments, fa-comments-o, fa-bullhorn --></div> <!-- toc on top on mobile -->
             <div class="col-md-9" role="main">
 
-<h2 id="ceed-applications-thrust">CEED Applications Thrust <img src="../img/app.png" align="right" alt="Nek5000 logo" height="250" width="350"></h2>
+<h2 id="ceed-applications-thrust">CEED Applications Thrust <img src="../img/app.png" align="right" alt="AP logo" height="250" width="350"></h2>
 <p><em>This page is under construction</em></p>
 <ul>
 <li>Misun Min leads the AP thrust.</li>
