--- a/bps/index.html
+++ b/bps/index.html
@@ -357,16 +357,35 @@
 <li>Mass matrix</li>
 <li>Coefficient: constant $1$</li>
 <li>3D hex mesh</li>
-<li>No essential boundary conditions</li>
+<li>No essential boundary conditions, or essential boundary conditions on the
+  whole boundary</li>
 <li>Solution space orders: $p=2,3,\ldots,15$; also, consider $p=1$?</li>
 <li>Quadrature: Gauss-Legendre (GL) with $q=p+2$ points in each spatial
   dimension; the qudrature order is $2q-1$</li>
 <li>Also, consider $q=2$, for $p=1$, and $q=3$, for $p=2$</li>
-<li>Nodal basis using $p+1$ Gauss-Legendre-Lobatto (GLL) points in each spatial
+<li>Use nodal basis with $p+1$ Gauss-Legendre-Lobatto (GLL) points in each spatial
   dimension</li>
 <li>Consider mesh orders of $p_{mesh}=1$, and $p_{mesh}=p$</li>
 <li>Focus on the QA/PA operator representation</li>
-<li>Meshes: ...</li>
+<li>Meshes: consider meshes with $E=2^s$ elements with $s\in\mathbb{N}$; for a
+  given $s$, use a 3D Cartesian mesh with
+  $2^{s_1}\times 2^{s_2}\times 2^{s_3}$ elements ($s_i\in\mathbb{N}$), where
+  $\{s_i\}$ are uniquely detrmined by the conditions: $s_1+s_2+s_3 = s$ and
+  $\lfloor s/3\rfloor+1\ge s_1 \ge s_2 \ge s_3 \ge \lfloor s/3\rfloor$</li>
+<li>For example:<ul>
+<li>if $s=15$, then $s_1=s_2=s_3=5$</li>
+<li>if $s=16$, then $s_1=6$ and $s_2=s_3=5$</li>
+<li>if $s=17$, then $s_1=s_2=6$ and $s_3=5$</li>
+</ul>
+</li>
+<li>Consider tests with $2^t$ processors, $0\le t\le s$, and partition the mesh
+  into $2^{t_1}\times 2^{t_2}\times 2^{t_3}$ uniform parts, where $\{t_i\}$
+  are derived from $t$ the same way $\{s_i\}$ are derived from $s$</li>
+<li><div style="color:#aa0000"><em>What are good partitioning algorithms for the
+  strong scaling limit? The problem is to generate well balanced partitions when
+  the ratio "number of elements" $/$ "number of processors" is small. METIS 4
+  does not do well on this type of problems. What about METIS 5 and other
+  graph partitioners? Maybe we need to develop specialized algorithms?</em></div></li>
 <li>Number of MPI tasks, and number of MPI tasks per node:<ul>
 <li>On ALCF's BG/Q, <code>cetus</code>: $2^{14}$ tasks total, with $2^5$ tasks per node</li>
 </ul>
@@ -382,7 +401,8 @@
 <li>Time per iteration = total CG time $/$ number of CG iterations</li>
 <li>Number of iterations to reach relative residual reduction of $10^{-6}$</li>
 <li>Time for quadrature-point/partial assembly</li>
-<li>Time is measured as maximum over all MPI ranks; using <code>MPI_Wtime()</code> or other</li>
+<li>Time is measured as maximum over all MPI ranks; using <code>MPI_Wtime()</code> or other
+  similar function</li>
 <li>...</li>
 </ul>
 <script type="text/x-mathjax-config">MathJax.Hub.Config({TeX: {equationNumbers: {autoNumber: "all"}}, tex2jax: {inlineMath: [['$','$']]}});</script>
