Deploying the CEED website with mkdocs, version 0.14.0

--- a/software/index.html
+++ b/software/index.html
@@ -270,8 +270,10 @@ Building on these efforts, the co-design center is producing a range of software
         <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
+	      <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
               Developed by the <a href="../about/">CEED team</a>
-              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
+              as part of the <a href="http://exascaleproject.org">ECP</a>
+	      <!-- Exascale Computing Project -->
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
@@ -294,7 +296,8 @@ Building on these efforts, the co-design center is producing a range of software
         <footer class="footer hidden-md hidden-sm hidden-lg">
            <div class="container">
               <p class="text-muted alignleft">
-              Developed by the <a href="../about/">CEED team</a>
+		<a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+		Developed by the <a href="../about/">CEED team</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
