--- a/about/index.html
+++ b/about/index.html
@@ -324,7 +324,8 @@ in support of the nation’s exascale computing imperative.</p>
 <hr />
 <p>Website built with <a href="http://www.mkdocs.org/">MkDocs</a>, <a href="http://getbootstrap.com/">Bootstrap</a>
 and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://github.com/ceed/">GitHub</a>.</p>
-<p>LLNL-WEB-XXXXXX.</p></div>
+<p>LLNL-WEB-XXXXXX.
+<a href="https://www.llnl.gov/disclaimer.html">Privacy &amp; Legal Notice</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     
@@ -347,8 +348,10 @@ and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://g
         <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
+	      <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
               Developed by the <a href="../about/">CEED team</a>
-              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
+              as part of the <a href="http://exascaleproject.org">ECP</a>
+	      <!-- Exascale Computing Project -->
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
@@ -371,7 +374,8 @@ and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://g
         <footer class="footer hidden-md hidden-sm hidden-lg">
            <div class="container">
               <p class="text-muted alignleft">
-              Developed by the <a href="../about/">CEED team</a>
+		<a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+		Developed by the <a href="../about/">CEED team</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
