--- a/magma/index.html
+++ b/magma/index.html
@@ -326,8 +326,10 @@ of the <a href="https://www.utk.edu/">University of Tennessee</a>.</p>
         <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
+	      <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
               Developed by the <a href="../about/">CEED team</a>
-              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
+              as part of the <a href="http://exascaleproject.org">ECP</a>
+	      <!-- Exascale Computing Project -->
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
@@ -350,7 +352,8 @@ of the <a href="https://www.utk.edu/">University of Tennessee</a>.</p>
         <footer class="footer hidden-md hidden-sm hidden-lg">
            <div class="container">
               <p class="text-muted alignleft">
-              Developed by the <a href="../about/">CEED team</a>
+		<a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+		Developed by the <a href="../about/">CEED team</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
