--- a/petsc/index.html
+++ b/petsc/index.html
@@ -286,8 +286,10 @@ solvers that work with unassembled representations of linear operators.</p>
         <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
+	      <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
               Developed by the <a href="../about/">CEED team</a>
-              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
+              as part of the <a href="http://exascaleproject.org">ECP</a>
+	      <!-- Exascale Computing Project -->
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
@@ -310,7 +312,8 @@ solvers that work with unassembled representations of linear operators.</p>
         <footer class="footer hidden-md hidden-sm hidden-lg">
            <div class="container">
               <p class="text-muted alignleft">
-              Developed by the <a href="../about/">CEED team</a>
+		<a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+		Developed by the <a href="../about/">CEED team</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
