--- a/thrusts/index.html
+++ b/thrusts/index.html
@@ -282,8 +282,10 @@ the development of discretization libraries and miniapps.</p></div>
         <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
+	      <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
               Developed by the <a href="../about/">CEED team</a>
-              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
+              as part of the <a href="http://exascaleproject.org">ECP</a>
+	      <!-- Exascale Computing Project -->
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
@@ -306,7 +308,8 @@ the development of discretization libraries and miniapps.</p></div>
         <footer class="footer hidden-md hidden-sm hidden-lg">
            <div class="container">
               <p class="text-muted alignleft">
-              Developed by the <a href="../about/">CEED team</a>
+		<a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+		Developed by the <a href="../about/">CEED team</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
