Deploying the CEED website with mkdocs, version 0.14.0

--- a/codesign/index.html
+++ b/codesign/index.html
@@ -270,18 +270,20 @@ to work with vendors, now and in the future (e.g. in system procurement).</li>
 <li>Provide test and demonstration cases for application scientists who are
 considering new formulations.</li>
 </ul>
-<p>The <em>miniapps</em> developed in CEED, which we also refer to as <em>CEEDlings</em>, will
-range from local, element-level <em>kernels</em>, which can be run in a simulator, to
-<em>bake-off problems</em>, that combine local and global kernels into model problem
-benchmarks for high-order computations, to <em>proxy apps</em> which will include also
-application-relevant physics.</p>
+<p>The <a href="../miniapps/">miniapps</a> developed in CEED, which we also refer to as
+<em>CEEDlings</em>, will range from local, element-level <em>kernels</em>, which can be run in
+a simulator, to <a href="../bps/">bake-off problems</a>, that combine local and global
+kernels into model problem benchmarks for high-order computations, to <em>proxy
+apps</em> which will include also application-relevant physics.</p>
 <p>These encapsulated <em>CEEDlings</em> will be will be used in interactions with vendors
-on emergent HPC technologies and ECP software technologies projects to highlight
-performance critical paths (e.g., size of on package memory, internode latency,
-hardware collectives) and provide simple examples of meaningful high-order
-computations.  One of the goals in these interactions will be to impact the
-design of exascale architectures and system and application software, for
-improved portability and performance of the high-order algorithms.</p></div>
+on <a href="https://exascaleproject.org/focus_area/hardware">emergent HPC technologies</a>
+and <a href="https://exascaleproject.org/focus_area/software">ECP software technologies</a>
+projects to highlight performance critical paths (e.g., size of on package memory,
+internode latency, hardware collectives) and provide simple examples of meaningful
+high-order computations.  One of the goals in these interactions will be to
+impact the design of <a href="https://exascaleproject.org/what-is-exascale">exascale architectures</a>
+and system and application software, for improved portability and performance of
+the high-order algorithms.</p></div>
         </div>
     
 
