--- a/holmes/index.html
+++ b/holmes/index.html
@@ -293,16 +293,18 @@ high-order finite element computations.</p>
 <li>The <a href="../gslib/">gslib</a> for optimized gather-scatter operations</li>
 </ul>
 </li>
-<li>Example ceedling apps<ul>
+<li>Example CEEDling apps<ul>
 <li>Elliptic solvers</li>
 <li>Boltzmann flow solver</li>
 <li>Acoustics time-domain solver</li>
 </ul>
 </li>
 </ul>
+<p>In CEED, Holmes is primarily involved in the efforts of the <a href="../fe/">Finite Element</a>
+and <a href="../sw/">Software</a> thrusts.</p>
 <p>Holmes is being developed in <a href="http://tcew.github.io/#/Projects">Tim Warburton's group</a>
-in <a href="https://www.vt.edu/">Virginia Tech</a>.</p>
-<p>The project GitHub repository will be made public in 2017.</p></div>
+at <a href="https://www.vt.edu/">Virginia Tech</a>.</p>
+<p><em>The project GitHub repository will be made public in 2017. Stay tuned...</em></p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
