--- a/mfem/index.html
+++ b/mfem/index.html
@@ -275,6 +275,7 @@ and <a href="http://mfem.org/features/#higher-order-finite-element-spaces">space
 </ul>
 <p>MFEM is being developed in <a href="https://computation.llnl.gov/casc">CASC</a>,
 <a href="https://www.llnl.gov">LLNL</a> and is freely available under LGPL 2.1.</p>
+<p>In CEED, MFEM is a main component of the efforts in the <a href="../ap/">Applications</a> and <a href="../fe/">Finite Element</a> thrusts.</p>
 <p>For more information, see the MFEM website: <a href="http://mfem.org/">http://mfem.org</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
