--- a/nek/index.html
+++ b/nek/index.html
@@ -276,7 +276,8 @@ industry. We highlight a few of the many applications using Nek5000/NekCEM today
 <li>Electromagnetics modeling</li>
 <li>Drift-diffusion  modeling</li>
 </ul>
-<p>Nek is freely available under a BSD license.</p>
+<p>Nek5000 and NekCEM are freely available under a BSD license.</p>
+<p>In CEED, Nek is a main component of the efforts in the <a href="../ap/">Applications</a> and <a href="../fe/">Finite Element</a> thrusts.</p>
 <p>For more information, see the Nek5000 website: <a href="https://nek5000.mcs.anl.gov">https://nek5000.mcs.anl.gov</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
