--- a/occa/index.html
+++ b/occa/index.html
@@ -267,6 +267,8 @@ pick at run-time, for example: CPUs, GPUs, Intel’s Xeon Phi, FPGAs.</p>
 OCCA kernel language (OKL). OKL minimally extends C and restricts the user to
 write parallel code that is JIT compiled.</p>
 <p>OCCA is freely available under an MIT license.</p>
+<p>In CEED, Holmes is primarily involved in the efforts of the <a href="../sw/">Software</a> and
+<a href="../fe/">Finite Element</a> thrusts.</p>
 <p>For more information, see the OCCA website: <a href="http://libocca.org/">http://libocca.org</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
