--- a/partners/index.html
+++ b/partners/index.html
@@ -267,6 +267,8 @@
 
 <h2 id="ceed-partners">CEED Partners</h2>
 <p><em>This page is under construction</em></p>
+<p>CEED is interested in reaching out to additional apps, including low-order
+applications.</p>
 <h4 id="ecp-partners">ECP Partners</h4>
 <ul>
 <li>SMRs</li>
