--- a/petsc/index.html
+++ b/petsc/index.html
@@ -268,6 +268,7 @@ interfaces for efficient and robust solution of the algebraic equations
 appearing in high-order/spectral element methods.  This will include multilevel
 solvers that work with unassembled representations of linear operators.</p>
 <p>PETSc is freely available under a BSD license.</p>
+<p>In CEED, PETSc is primarily involved in the efforts of the <a href="../sw/">Software</a> thrust.</p>
 <p>For more information, see the PETSc website: <a href="https://www.mcs.anl.gov/petsc/">https://www.mcs.anl.gov/petsc/</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
