--- a/pumi/index.html
+++ b/pumi/index.html
@@ -260,9 +260,10 @@
             <div class="col-md-9" role="main">
 
 <h2 id="pumi-wzxhzdk0"><a href="https://scorec.rpi.edu/pumi/">PUMI</a> <img src="../img/pumi.png" align="right" alt="PUMI logo" height="150" width="450"></h2>
-<p><em>PUMI</em> is an unstructured, distributed mesh data management system designed for massively parallel computing.</p>
-<p>PUMI supports a full range of operations on unstructured meshes on
-massively parallel computers consisting of five libraries:</p>
+<p><em>PUMI</em> is an unstructured, distributed mesh data management system designed for
+ massively parallel computing.</p>
+<p>PUMI supports a full range of operations on unstructured meshes on massively
+parallel computers consisting of five libraries:</p>
 <ul>
 <li><a href="https://scorec.rpi.edu/pcu/">PCU</a> for phased message passing and thread management.</li>
 <li><a href="https://scorec.rpi.edu/pumi/pumi_geom.php">GMI</a> for geometric model interface.</li>
@@ -270,7 +271,11 @@ massively parallel computers consisting of five libraries:</p>
 <li><a href="https://scorec.rpi.edu/~dibanez/core/apfMesh_8h.html">APF Mesh</a> for partition model and distributed mesh management.</li>
 <li><a href="https://scorec.rpi.edu/apf/">APF_Field</a> for field management.</li>
 </ul>
-<p>PUMI is being developed at RPI's <a href="https://www.scorec.rpi.edu/">Scientific Computation Research Center</a> and is currently being used on projects sponsored by the DOE, NSF, Army, NASA, IBM and several companies.</p>
+<p>PUMI is being developed at RPI's <a href="https://www.scorec.rpi.edu/">Scientific Computation Research
+Center</a> and is currently being used on projects
+sponsored by the DOE, NSF, Army, NASA, IBM and several companies.</p>
+<p>In CEED, PUMI is primarily involved in the efforts of the <a href="../fe/">Finite Element</a>
+and <a href="../sw/">Software</a> thrusts.</p>
 <p>For more information, see the <a href="https://scorec.rpi.edu/pumi/pumi_documents.php">PUMI documents</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
