--- a/software/index.html
+++ b/software/index.html
@@ -246,24 +246,32 @@
             <div class="col-md-12" role="main">
 
 <h2 id="software-catalog">Software Catalog</h2>
-<p>The CEED team includes members of the <a href="../nek/">Nek5000</a>, <a href="../mfem/">MFEM</a>, <a href="../magma/">MAGMA</a>, <a href="../occa/">OCCA</a> and <a href="../petsc/">PETSc</a> projects.
-Building on these efforts, the co-design center is producing a range of software products, including:</p>
+<p>The CEED team includes members of the <a href="../nek/">Nek5000</a>, <a href="../mfem/">MFEM</a>,
+<a href="../magma/">MAGMA</a>, <a href="../occa/">OCCA</a> and <a href="../petsc/">PETSc</a> projects.  Building on
+these efforts, the co-design center is producing a range of software products,
+including:</p>
 <ul>
 <li>
-<p>Next-generation <a href="../ceed-code/">finite element</a> <a href="../nek/">discretization</a> <a href="../mfem/">libraries</a> that enable unstructured PDE-based applications to take
-   full advantage of exascale resources. These libraries cover the full spectrum of discretizations, from assembled
-   low-order to matrix-free high-order methods.</p>
+<p>Next-generation <a href="../ceed-code/">finite element</a> <a href="../nek/">discretization</a>
+  <a href="../mfem/">libraries</a> that enable unstructured PDE-based applications to take
+  full advantage of exascale resources. These libraries cover the full spectrum
+  of discretizations, from assembled low-order to matrix-free high-order
+  methods.</p>
 </li>
 <li>
-<p><a href="../miniapps/">Miniapps</a> combining applications-relevant physics with key high-order kernels that use matrix-free forms
-   for efficient performance. CEED also develops element-level kernels and <a href="../bps/">benchmark problems</a>.</p>
+<p><a href="../miniapps/">Miniapps</a> combining applications-relevant physics with key
+  high-order kernels that use matrix-free forms for efficient performance. CEED
+  also develops element-level kernels and <a href="../bps/">benchmark problems</a>.</p>
 </li>
 <li>
-<p>Broadly applicable technologies, including extensions of dense linear algebra libraries to support
- <a href="../magma/">fast tensor contractions</a>, scalable matrix-free <a href="../petsc/">linear solvers</a> and programming models for <a href="../occa/">performance portability</a>.</p>
+<p>Broadly applicable technologies, including extensions of dense linear algebra
+  libraries to support <a href="../magma/">fast tensor contractions</a>, scalable
+  matrix-free <a href="../petsc/">linear solvers</a> and programming models for <a href="../occa/">performance
+  portability</a>.</p>
 </li>
 </ul>
-<p><strong>All CEED software is open-source and publicly available at <a href="https://github.com/ceed">https://github.com/ceed</a></strong></p></div>
+<p><strong>All CEED software is open-source and publicly available at
+  <a href="https://github.com/ceed">https://github.com/ceed</a>.</strong></p></div>
         </div>
     
 
