Deploying the CEED website with mkdocs, version 0.16.3

--- a/magma/index.html
+++ b/magma/index.html
@@ -297,6 +297,7 @@ are scheduled on accelerators.</p>
 <h3 id="magma-batched">MAGMA Batched</h3>
 <p><img src="../img/magma_batched.png" width="500" alt="MAGMA Batched"></p>
 <h3 id="magma-sparse">MAGMA Sparse</h3>
+<p><img src="../img/magma_spmvp100.png" width="500" alt="MAGMA Sparse"></p>
 <h3 id="magma-development">MAGMA Development</h3>
 <p>MAGMA is being developed at the <a href="http://icl.cs.utk.edu">Innovative Computing Laboratory</a>
 of the <a href="https://www.utk.edu/">University of Tennessee</a>.</p>
