Deploying the CEED website with mkdocs, version 0.14.0

--- a/about/index.html
+++ b/about/index.html
@@ -326,7 +326,7 @@ in support of the nation’s exascale computing imperative.</p>
 <hr />
 <p>Website built with <a href="http://www.mkdocs.org/">MkDocs</a>, <a href="http://getbootstrap.com/">Bootstrap</a>
 and <a href="http://bootswatch.com/">Bootswatch</a>. Hosted on <a href="http://github.com/ceed/">GitHub</a>.</p>
-<p>LLNL-WEB-XXXXXX.
+<p>LLNL-WEB-732668.
 <a href="https://www.llnl.gov/disclaimer.html">Privacy &amp; Legal Notice</a>.</p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
