Deploying the CEED website with mkdocs, version 0.16.3

--- a/magma/index.html
+++ b/magma/index.html
@@ -346,23 +346,22 @@ of the <a href="https://www.utk.edu/">University of Tennessee</a>.</p>
         <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
-	      <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+	      <!-- <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>. -->
               Developed by the <a href="../about/">CEED team</a>
-              as part of the <a href="http://exascaleproject.org">ECP</a>
-	      <!-- Exascale Computing Project -->
+              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
                   <img src="../img/ecp-black.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="ECP logo"></a>
                   <a href="https://science.energy.gov/">
                   <img src="../img/doe-sc.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="DOE-SC logo"></a>
                   <a href="https://nnsa.energy.gov/">
                   <img src="../img/nnsa.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="NNSA logo"></a>
                </div>
                <!-- footer height is 50px -->
@@ -372,13 +371,13 @@ of the <a href="https://www.utk.edu/">University of Tennessee</a>.</p>
         <footer class="footer hidden-md hidden-sm hidden-lg">
            <div class="container">
               <p class="text-muted alignleft">
-		<a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+		<!-- <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>. -->
 		Developed by the <a href="../about/">CEED team</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
                   <img src="../img/ecp-black.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="ECP logo"></a>
               </div>
            </div>
