--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@ The CEED software will also include optimized assembly support for low-order met
 <div class="bs-sidebar hidden-print well" role="complementary">
     <ul class="nav bs-sidenav">
     <li class="main"><a href="../news/">What's New?</a> </li>
-       <li> <a href="../news/#first-ceed-annual-meeting-to-be-held-at-llnl">🗞  &nbsp;First annual meeting to be held at LLNL</a> </li>
-       <li> <a href="../news/#gpu-hackaton-2017">🗞  &nbsp;CEED to participate in GPU hackathon at BNL</a> </li>
-       <li> <a href="../news/#workshop-on-batched-reproducible-and-reduced-precision-blas">🗞  &nbsp;Workshop on batched BLAS</a> </li>
-       <li> <a href="../news/#software-release-mfem-v33">🗞  &nbsp;Software release: MFEM v3.3</a> </li>
-       <li> <a href="../news/#ceed-co-design-center-announced">🗞  &nbsp;CEED co-design center announced</a> </li>
+       <li> <a href="../news/#first-ceed-annual-meeting-to-be-held-at-llnl">&#9658;&nbsp;First annual meeting to be held at LLNL</a> </li>
+       <li> <a href="../news/#gpu-hackaton-2017">&#9658;&nbsp;CEED to participate in GPU hackathon at BNL</a> </li>
+       <li> <a href="../news/#workshop-on-batched-reproducible-and-reduced-precision-blas">&#9658;&nbsp;Workshop on batched BLAS</a> </li>
+       <li> <a href="../news/#software-release-mfem-v33">&#9658;&nbsp;Software release: MFEM v3.3</a> </li>
+       <li> <a href="../news/#ceed-co-design-center-announced">&#9658;&nbsp;CEED co-design center announced</a> </li>
        <li> <a href="../news/">More updates...</a> </li>
 
     <hr style="background-color:white; height:20px; margin-left:-1px;  margin-right:-1px; margin-top:15px; margin-bottom:10px " />
@@ -352,23 +352,22 @@ The CEED software will also include optimized assembly support for low-order met
         <footer class="footer hidden-xs">
            <div class="container">
               <p class="text-muted alignleft">
-	      <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+	      <!-- <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>. -->
               Developed by the <a href="./about/">CEED team</a>
-              as part of the <a href="http://exascaleproject.org">ECP</a>
-	      <!-- Exascale Computing Project -->
+              as part of the <a href="http://exascaleproject.org">Exascale Computing Project</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
                   <img src="./img/ecp-black.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="ECP logo"></a>
                   <a href="https://science.energy.gov/">
                   <img src="./img/doe-sc.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="DOE-SC logo"></a>
                   <a href="https://nnsa.energy.gov/">
                   <img src="./img/nnsa.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="NNSA logo"></a>
                </div>
                <!-- footer height is 50px -->
@@ -378,13 +377,13 @@ The CEED software will also include optimized assembly support for low-order met
         <footer class="footer hidden-md hidden-sm hidden-lg">
            <div class="container">
               <p class="text-muted alignleft">
-		<a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>.
+		<!-- <a href="https://www.llnl.gov/disclaimer.html">Privacy & Legal Notice</a>. -->
 		Developed by the <a href="./about/">CEED team</a>
               </p>
               <div style="text-align:right">
                   <a href="http://exascaleproject.org">
                   <img src="./img/ecp-black.png"
-                  style="display:inline;height:50px;padding:10px;margin:0"
+                  style="display:inline;height:50px;padding:12px;margin:0;opacity:0.5"
                   alt="ECP logo"></a>
               </div>
            </div>
