Deploying the CEED website with mkdocs, version 0.16.3

--- a/about/index.html
+++ b/about/index.html
@@ -347,7 +347,7 @@ in support of the nation’s exascale computing imperative.</p>
 <li><a href="https://scholar.google.com/citations?user=lcSP908AAAAJ">Robert Rieben</a></li>
 <li><a href="http://www.mcs.anl.gov/person/ronald-omah-rahaman">Ron Rahaman</a></li>
 <li><a href="https://www.alcf.anl.gov/staff-directory/scott-parker">Scott Parker</a></li>
-<li><a href="http://">Som Dutta</a></li>
+<li><a href="http://hydro.cee.illinois.edu/people/dutta-som/">Som Dutta</a></li>
 <li><a href="http://www.icl.utk.edu/~tomov">Stanimire Tomov</a></li>
 <li><a href="https://github.com/stgeke">Stefan Kerkemeier</a></li>
 <li><a href="https://github.com/thilinarmtb">Thilina Ratnayake</a></li>
