Deploying the CEED website with mkdocs, version 0.14.0

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ thrusts</a>, focused on the following computational motifs and their
 performance on <a href="https://exascaleproject.org/what-is-exascale">exascale hardware</a>.
 See also our <a href="pubs/">publications</a>.</p>
 <p><br></p>
-<h4 id="pde-based-simulations-on-unstructured-grids">PDE-based Simulations on Unstructured Grids</h4>
+<h4 id="pde-based-simulations-on-unstructured-grids">PDE-based simulations on unstructured grids</h4>
 <p>CEED is producing a range of <a href="software/">software products</a> supporting general
 <a href="fe/">finite element</a> algorithms on triangular, quadrilateral, tetrahedral and
 hexahedral meshes in 3D, 2D and 1D.  We target the
@@ -320,7 +320,7 @@ whole de Rham complex: H<sup>1</sup>, H(curl), H(div) and L<sub>2</sub>/DG space
 including conforming and non-conforming unstructured adaptive mesh refinement
 (AMR).</p>
 <p><br></p>
-<h4 id="high-orderspectral-finite-elements">High-Order/Spectral Finite Elements</h4>
+<h4 id="high-orderspectral-finite-elements">High-order/spectral finite elements</h4>
 <p>Our algorithms and software come with comprehensive high-order support: we provide
 <a href="bps/">efficient matrix-free operator evaluation</a> for any order space on any
 order mesh, including high-order curved meshes and all geometries in the de Rham complex.
