Deploying the CEED website with mkdocs, version 0.14.0

--- a/miniapps/index.html
+++ b/miniapps/index.html
@@ -387,8 +387,7 @@ implement high-order operator evaluation.</p>
 <a href="http://mfem.org/download"><button type="button" class="btn btn-success">
 <strong>Download MFEM</strong>
 </button></a>
-</center></p>
-<hr /></div>
+</center></p></div>
             <div class="col-md-3 hidden-xs hidden-sm"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
     
