Deploying the CEED website with mkdocs, version 0.14.0

--- a/software/index.html
+++ b/software/index.html
@@ -304,7 +304,7 @@ including:</p>
   portability</a>.</p>
 </li>
 </ul>
-<p><strong>All CEED software is open-source and publicly available at
+<p><strong>The CEED software is open-source and publicly available at
   <a href="https://github.com/ceed">https://github.com/ceed</a>.</strong></p></div>
         </div>
     
