Deploying the CEED website with mkdocs, version 0.14.0

--- a/holmes/index.html
+++ b/holmes/index.html
@@ -312,9 +312,10 @@ high-order finite element computations.</p>
 <li>Two level overlapping additive Schwartz elliptic problem preconditioning<ul>
 <li>Fast approximate block preconditioning</li>
 <li>Algebraic multigrid coarse solver with heterogeneous acceleration</li>
-<li>Parallel direct solver XXT for the coarsest level solve.</li>
+<li>Parallel direct solver XXT for the coarsest level solve.        </li>
 </ul>
 </li>
+<li>Full algebraic multigrid preconditioning.</li>
 </ul>
 </li>
 <li>Implementation<ul>
@@ -328,6 +329,7 @@ high-order finite element computations.</p>
 </ul>
 </li>
 <li>Example CEEDling apps<ul>
+<li>Incompressible flow solvers</li>
 <li>Elliptic solvers</li>
 <li>Boltzmann flow solver</li>
 <li>Acoustics time-domain solver</li>
